# sender-app

./: .env  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  requirements.txt
app/: config.py  main.py  utils.py
app/events/: methods.py  tasks.py
tests/: test_main.py  test_utils.py
tests/test_events/: test_methods.py  test_tasks.py
